ajout media queries

--- a/media-queries.css
+++ b/media-queries.css
@@ -6,7 +6,6 @@
   header img {
     align-self: center;
     width: 1%;
-    left: 0;
     height: 12vh;
   }
   header .nav-menu {
@@ -182,5 +181,19 @@
   }
   .svg-white:hover {
     fill: white;
+  }
+}
+@media screen and (max-height: 768px) and (max-width: 1366px) {
+  header {
+    height: 100vh;
+  }
+  header img {
+    width: 3%;
+    height: 18vh;
+  }
+}
+@media screen and (max-height: 555px) {
+  header h1 {
+    font-size: 2.5em;
   }
 }/*# sourceMappingURL=media-queries.css.map */
